# pdf-comic-viewer

./: .gitignore  lerna.json  package.json
backend/: Cargo.toml  README.md
backend/database/initdb/: create_table.sql
backend/migrations/2020-04-01-144406_create_comic/: down.sql  up.sql
backend/migrations/2020-04-02-142346_folder/: down.sql
backend/src/: main.rs  models.rs  pdfs.rs  schema.rs
frontend/: package.json
frontend/src/: App.tsx  readPdf.ts
frontend/src/component/main/: main.tsx
frontend/src/component/pdf/: RenderComic.css  RenderComic.tsx
