[package]
name = "backend"
version = "0.1.0"
authors = ["s-haya-123 <ganbaru.wakenai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_contrib = { version = "0.4.4", features = ["json"] }
rocket_cors = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.10"